--- a/src/styles/core/_base.scss
+++ b/src/styles/core/_base.scss
@@ -32,7 +32,8 @@ a {
 }
 
 .btn-theme-sec{
-    padding: 12px;
+    padding: 0.8rem;
+    width: 3rem;
     border-radius: 5px;
     border: 3px solid $clr-sec!important;
     outline: none;
@@ -49,6 +50,12 @@ a {
     line-height: 1.42857143;
 }
 
+.writing-mode-vertical {
+    writing-mode: vertical-rl;
+    text-orientation: mixed;
+    transform-origin: bottom;
+  }
+  
 
 .bg-theme { background-color: $clr-theme; }
 
