--- a/src/styles/site.css
+++ b/src/styles/site.css
@@ -34,7 +34,8 @@ a {
 }
 
 .btn-theme-sec {
-  padding: 12px;
+  padding: 0.8rem;
+  width: 3rem;
   border-radius: 5px;
   border: 3px solid #5cb85c !important;
   outline: none;
@@ -49,6 +50,12 @@ a {
   font-weight: 600;
   font-size: 14px;
   line-height: 1.42857143;
+}
+
+.writing-mode-vertical {
+  writing-mode: vertical-rl;
+  text-orientation: mixed;
+  transform-origin: bottom;
 }
 
 .bg-theme {
