--- a/src/styles/core/_base.scss
+++ b/src/styles/core/_base.scss
@@ -23,7 +23,7 @@ a {
     white-space: nowrap;
     user-select: none;
     -webkit-user-select: none;
-    background-color: $clr-sec!important; 
+    background-color: $clr-sec!important;
 
     color: white;
     font-weight: 600;
@@ -42,7 +42,7 @@ a {
     white-space: nowrap;
     user-select: none;
     -webkit-user-select: none;
-    color: black!important; 
+    color: black!important;
 
     color: white;
     font-weight: 600;
@@ -50,25 +50,35 @@ a {
     line-height: 1.42857143;
 }
 
+.btn-theme-3{
+    outline: none;
+    text-align: center;
+    white-space: nowrap;
+    user-select: none;
+    -webkit-user-select: none;
+    border-radius: 5px;
+    font-weight: 600;
+    font-size: 14px;
+}
+
 .writing-mode-vertical {
     writing-mode: vertical-rl;
     text-orientation: mixed;
     transform-origin: bottom;
-  }
-  
+}
 
 .bg-theme { background-color: $clr-theme; }
 
 
-.table-sortable .th-sort-asc::after {
-    content: "\25b4";
-}
+// .table-sortable .th-sort-asc::after {
+//     content: "\25b4";
+// }
 
-.table-sortable .th-sort-desc::after {
-    content: "\25be";
-}
+// .table-sortable .th-sort-desc::after {
+//     content: "\25be";
+// }
 
-.table-sortable .th-sort-asc::after,
-.table-sortable .th-sort-desc::after {
-    margin-left: 5px;
-}
+// .table-sortable .th-sort-asc::after,
+// .table-sortable .th-sort-desc::after {
+//     margin-left: 5px;
+// }
