--- a/src/styles/site.css
+++ b/src/styles/site.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700;900&family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,400&display=swap");
 body {
   box-sizing: border-box;
@@ -52,6 +51,18 @@ a {
   line-height: 1.42857143;
 }
 
+.btn-theme-3 {
+  outline: none;
+  text-align: center;
+  white-space: nowrap;
+  -moz-user-select: none;
+       user-select: none;
+  -webkit-user-select: none;
+  border-radius: 5px;
+  font-weight: 600;
+  font-size: 14px;
+}
+
 .writing-mode-vertical {
   writing-mode: vertical-rl;
   text-orientation: mixed;
@@ -60,17 +71,4 @@ a {
 
 .bg-theme {
   background-color: #00b04e;
-}
-
-.table-sortable .th-sort-asc::after {
-  content: "▴";
-}
-
-.table-sortable .th-sort-desc::after {
-  content: "▾";
-}
-
-.table-sortable .th-sort-asc::after,
-.table-sortable .th-sort-desc::after {
-  margin-left: 5px;
 }/*# sourceMappingURL=site.css.map */
